feature: add tests